Replaced calls to Double constructor.