@@ -220,7 +220,7 @@ public class CmsSingleFileUploadDialog extends CmsPopup implements I_CmsUploadDi
             // the content length is unknown. For that reason take the request size to show how
             // much bytes were uploaded.
             double size = jsonObject.get(I_CmsUploadConstants.KEY_REQUEST_SIZE).isNumber().doubleValue();
-            long requestSize = new Double(size).longValue();
+            long requestSize = Double.valueOf(size).longValue();
             if (m_contentLength == 0) {
                 m_contentLength = requestSize;
             }
